// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remarkDirectivePyide > should transform basic pyide 1`] = `
"
<div class="directive-pyide" id="f273292d9939f7557020ca3ef7a9b17b85aeae6f8d1623c7ebfcbf82b0d4f69d" data-tests="W10=">
  <div class="container">
    <div class="buttons"><button class="output-btn active">pyide-output</button></div>
    <pre class="output"></pre>
    <form class="stdin hidden"><span class="stdin-prompt"></span><input class="stdin-field" type="text" autocomplete="off" spellcheck="false" aria-label="pyide-input"><button class="stdin-submit" type="submit">pyide-input-submit</button></form>
  </div>
  <div class="splitter" role="separator" aria-label="Resize panels"></div>
  <div class="editor-container">
    <div class="buttons"><button class="run">pyide-run</button><button class="stop" disabled>pyide-stop</button></div>
    <div class="editor" data-lang="python">print(&quot;Hello World&quot;)</div>
    <div class="buttons bottom"><button class="reset" title="pyide-reset" aria-label="pyide-reset"><svg class="icon icon-reset" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M1 4v6h6"></path>
          <path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
        </svg></button><button class="copy" title="pyide-copy" aria-label="pyide-copy"><svg class="icon icon-copy" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M9 9h11a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2V9z"></path>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg></button><button class="download" title="pyide-download" aria-label="pyide-download"><svg class="icon icon-download" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
          <path d="M7 10l5 5 5-5"></path>
          <path d="M12 15V3"></path>
        </svg></button><button class="fullscreen" title="ide-fullscreen-enter" aria-label="ide-fullscreen-enter"><svg class="icon icon-fullscreen" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
          <path d="M21 8V5a2 2 0 0 0-2-2h-3"></path>
          <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
          <path d="M3 16v3a2 2 0 0 0 2 2h3"></path>
        </svg></button></div>
  </div>
</div>
"
`;

exports[`remarkDirectivePyide > should transform pyide with canvas and packages attributes 1`] = `
"
<div class="directive-pyide" id="d96f2e9981b12f9aa1561011ba11a1dc93151363b6a9b6524eef535df08702cf" data-tests="W10=" data-canvas="true" data-packages="pytamaro">
  <div class="container">
    <div class="buttons"><button class="output-btn active">pyide-output</button><button class="canvas-btn">pyide-canvas</button></div>
    <div class="canvas-header hidden">pyide-canvas</div>
    <div class="canvas-wrapper hidden">
      <canvas class="canvas"></canvas>
    </div>
    <div class="canvas-output-splitter hidden" role="separator" aria-label="Resize canvas and output"></div>
    <div class="output-header hidden">pyide-output</div>
    <pre class="output"></pre>
    <form class="stdin hidden"><span class="stdin-prompt"></span><input class="stdin-field" type="text" autocomplete="off" spellcheck="false" aria-label="pyide-input"><button class="stdin-submit" type="submit">pyide-input-submit</button></form>
  </div>
  <div class="splitter" role="separator" aria-label="Resize panels"></div>
  <div class="editor-container">
    <div class="buttons"><button class="run">pyide-run</button><button class="stop" disabled>pyide-stop</button></div>
    <div class="editor" data-lang="python">from pytamaro import *</div>
    <div class="buttons bottom"><button class="reset" title="pyide-reset" aria-label="pyide-reset"><svg class="icon icon-reset" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M1 4v6h6"></path>
          <path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
        </svg></button><button class="copy" title="pyide-copy" aria-label="pyide-copy"><svg class="icon icon-copy" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M9 9h11a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2V9z"></path>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg></button><button class="download" title="pyide-download" aria-label="pyide-download"><svg class="icon icon-download" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
          <path d="M7 10l5 5 5-5"></path>
          <path d="M12 15V3"></path>
        </svg></button><button class="fullscreen" title="ide-fullscreen-enter" aria-label="ide-fullscreen-enter"><svg class="icon icon-fullscreen" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
          <path d="M21 8V5a2 2 0 0 0-2-2h-3"></path>
          <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
          <path d="M3 16v3a2 2 0 0 0 2 2h3"></path>
        </svg></button></div>
  </div>
</div>
"
`;

exports[`remarkDirectivePyide > should transform pyide with canvas attribute 1`] = `
"
<div class="directive-pyide" id="ada6c23b4307634ed3e82788dc268f01fd6a8a2a07b9b89360df7c928981bb87" data-tests="W10=" data-canvas="true">
  <div class="container">
    <div class="buttons"><button class="output-btn active">pyide-output</button><button class="canvas-btn">pyide-canvas</button></div>
    <div class="canvas-header hidden">pyide-canvas</div>
    <div class="canvas-wrapper hidden">
      <canvas class="canvas"></canvas>
    </div>
    <div class="canvas-output-splitter hidden" role="separator" aria-label="Resize canvas and output"></div>
    <div class="output-header hidden">pyide-output</div>
    <pre class="output"></pre>
    <form class="stdin hidden"><span class="stdin-prompt"></span><input class="stdin-field" type="text" autocomplete="off" spellcheck="false" aria-label="pyide-input"><button class="stdin-submit" type="submit">pyide-input-submit</button></form>
  </div>
  <div class="splitter" role="separator" aria-label="Resize panels"></div>
  <div class="editor-container">
    <div class="buttons"><button class="run">pyide-run</button><button class="stop" disabled>pyide-stop</button></div>
    <div class="editor" data-lang="python">import pygame
pygame.init()</div>
    <div class="buttons bottom"><button class="reset" title="pyide-reset" aria-label="pyide-reset"><svg class="icon icon-reset" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M1 4v6h6"></path>
          <path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
        </svg></button><button class="copy" title="pyide-copy" aria-label="pyide-copy"><svg class="icon icon-copy" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M9 9h11a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2V9z"></path>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg></button><button class="download" title="pyide-download" aria-label="pyide-download"><svg class="icon icon-download" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
          <path d="M7 10l5 5 5-5"></path>
          <path d="M12 15V3"></path>
        </svg></button><button class="fullscreen" title="ide-fullscreen-enter" aria-label="ide-fullscreen-enter"><svg class="icon icon-fullscreen" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
          <path d="M21 8V5a2 2 0 0 0-2-2h-3"></path>
          <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
          <path d="M3 16v3a2 2 0 0 0 2 2h3"></path>
        </svg></button></div>
  </div>
</div>
"
`;

exports[`remarkDirectivePyide > should transform pyide with packages attribute 1`] = `
"
<div class="directive-pyide" id="1228cf6316e76809e208a044b2f4eb9e6d175c9fcfcc767dd04d788ce400f0c2" data-tests="W10=" data-packages="snowballstemmer,nltk">
  <div class="container">
    <div class="buttons"><button class="output-btn active">pyide-output</button></div>
    <pre class="output"></pre>
    <form class="stdin hidden"><span class="stdin-prompt"></span><input class="stdin-field" type="text" autocomplete="off" spellcheck="false" aria-label="pyide-input"><button class="stdin-submit" type="submit">pyide-input-submit</button></form>
  </div>
  <div class="splitter" role="separator" aria-label="Resize panels"></div>
  <div class="editor-container">
    <div class="buttons"><button class="run">pyide-run</button><button class="stop" disabled>pyide-stop</button></div>
    <div class="editor" data-lang="python">import snowballstemmer</div>
    <div class="buttons bottom"><button class="reset" title="pyide-reset" aria-label="pyide-reset"><svg class="icon icon-reset" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M1 4v6h6"></path>
          <path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
        </svg></button><button class="copy" title="pyide-copy" aria-label="pyide-copy"><svg class="icon icon-copy" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M9 9h11a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2V9z"></path>
          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
        </svg></button><button class="download" title="pyide-download" aria-label="pyide-download"><svg class="icon icon-download" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
          <path d="M7 10l5 5 5-5"></path>
          <path d="M12 15V3"></path>
        </svg></button><button class="fullscreen" title="ide-fullscreen-enter" aria-label="ide-fullscreen-enter"><svg class="icon icon-fullscreen" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
          <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
          <path d="M21 8V5a2 2 0 0 0-2-2h-3"></path>
          <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
          <path d="M3 16v3a2 2 0 0 0 2 2h3"></path>
        </svg></button></div>
  </div>
</div>
"
`;
